<resources>
    <string name="app_name" translatable="false">CNU M3U Player</string>
    <string name="NoEPG">"EPG Not Supported Yet"</string>
    <string-array name="turListesi">
        <item>Channels</item>
        <item>Movies</item>
        <item>Series</item>
    </string-array>

    <string name="yayin_tur">Broadcast Type</string>
    <string name="arama_metni">Search Text </string>
    <string name="ayarlar">Settings</string>
    <string name="sifre_gir">Enter Mgmt. Password</string>
    <string name="gizli_icerik">Show Hidden Content</string>
    <string name="yetiskin_goster">Show Adult Content</string>
    <string name="yil">Year</string>
    <string name="puan">Point</string>
    <string name="tur">Type</string>
    <string name="select_type">Select Type</string>
    <string name="yeni">New</string>
    <string name="m3u_internet_adresi_1">m3u URL Address (1)</string>
    <string name="m3u_internet_adresi_2">m3u URL Address (2)</string>
    <string name="m3u_internet_adresi_3">m3u URL Address (3)</string>
    <string name="tmdb_erisim_anahtar">TMDB Access Key</string>
    <string name="iptal">Cancel</string>
    <string name="kaydet">Save</string>
    <string name="son_tv_kanalini_oynatarak_basla">Start last TV channel</string>
    <string name="TurSec">Select Genre</string>
    <string name="tmdb_aramasi_icin_kriter_giriniz">Enter criteria for searching TMDB database.</string>
    <string name="bolum_cekme_basladi">The process which gets episodes info started</string>
    <string name="once_dizi_cek">To get information about episodes you have to get serie info</string>
    <string name="kullanici_gruplari">User Groups</string>
    <string name="kanallari_yukari_tasi">Move Up Selected</string>
    <string name="kanallari_asagi_tasi">Mode Down Selected</string>
    <string name="kanallari_sil">Delete Selected</string>
    <string name="kanallari_gizle_ac">Hide/Unhide Channels</string>
    <string name="kanallari_yetiskin_yap_yapma">Make Adult/Normal</string>
    <string name="yeni_grup_ekle">Add New Group</string>
    <string name="grubun_adini_degistir">Rename Group</string>
    <string name="grubu_sil">Delete Group</string>
    <string name="grubu_gizle_ac">Hide/Unhide Group</string>
    <string name="grubu_yetiskin_yap_yapma">Make Group Adult/Normal</string>
    <string name="arama_metni_giriniz">Enter search criteria…</string>
    <string name="yeni_grup_ismi_gir">Enter group name</string>
    <string name="yeni_grup_ismi_degistir">Enter new name for group</string>
    <string name="AdBosOlamaz">You have to enter name!</string>
    <string name="AdBosluklaBaslamaz">Name must not start with space!</string>
    <string name="AdRakamlaBaslamaz">Name must not start with numbers!</string>
    <string name="ZatenVarOlanBirIsimKullanilamaz">You can not use already used names in groups!</string>
    <string name="EskiGrupBulunamadi">Old group could nor found!</string>
    <string name="GelenGrupAdDegismez">You can not rename download groups!</string>
    <string name="aranan30danFazla">There are more than 30 items, only first 30 is added to list.</string>
    <string name="GizliIlkHarf">H</string>
    <string name="YetiskinIlkHarf">A</string>
    <string name="zatenListedeVar">Item already exist in list!</string>
    <string name="bulunanlarEklendi">Found items added to selection box.</string>
    <string name="secilenGrupBulunamadi">Group could not found!</string>
    <string name="tamEkranBaslat">Start full screen</string>
    <string name="onaySilmeBaslik">Confirmation for deletion</string>
    <string name="onaySilmeMesaj">Selected items will be removed from group, OK?</string>
    <string name="kanalliGrupSilinemez">Before deleting group, you have to remove all items!</string>
    <string name="kanali_gizle_ac">Hide/Unhide item</string>
    <string name="kanali_yetiskin_yap_yapma">Make Adult/Normal</string>
    <string name="gelen_gruplar">Download Groups</string>
    <string name="filmOzellik">Votes:%s, Type:%s,  Date:%s</string>
    <string name="tmdbBagYok">You have to enter TMDB key to see properties!</string>
    <string name="aramaKayitYok">No record found!</string>
    <string name="tmdb_erisim_dil">TMDB Info Language</string>
    <string name="parola_giriniz">Enter Password</string>
    <string name="yeni_parola_giriniz1">New Password (1)</string>
    <string name="yeni_parola_giriniz2">New Password (2)</string>
    <string name="tmdb_bagla">Link to TMDB</string>
    <string name="bolum_cek">Get Episode Infos</string>
    <string name="uc_nokta">…</string>
    <string name="degistir">Change</string>
    <string name="hatali_parola">Password is wrong</string>
    <string name="hata_parola_kisa">Password must gave at least 4 character</string>
    <string name="hata_parola_bosluk">Password can not contain spaces</string>
    <string name="hata_parola_ayni_degil">Two new password is not same</string>
    <string name="kapat">Close</string>
    <string name="parola_degisti">Password is changed</string>
    <string name="ara">Search</string>
    <string name="TMDBKur">Try after setting of TMDB key!</string>
    <string name="veriCekiliyor">Count of data stored to DB: %d</string>
</resources>