<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ayarlarLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".AyarlarFragment">

    <TextView android:id="@+id/lblm3uAdresA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/m3u_internet_adresi_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText android:id="@+id/m3uAdresA"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="6dp"
        android:background="@android:drawable/editbox_background"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblm3uAdresA"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize" />

    <TextView android:id="@+id/lblm3uAdresB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/m3u_internet_adresi_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/m3uAdresA" />

    <EditText android:id="@+id/m3uAdresB"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="6dp"
        android:background="@android:drawable/editbox_background"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblm3uAdresB"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize" />

    <TextView android:id="@+id/lblm3uAdresC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/m3u_internet_adresi_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/m3uAdresB" />

    <EditText android:id="@+id/m3uAdresC"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="6dp"
        android:background="@android:drawable/editbox_background"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblm3uAdresC"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize" />

    <TextView android:id="@+id/lbltmdbErisimAnahtar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tmdb_erisim_anahtar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/m3uAdresC" />

    <EditText android:id="@+id/tmdbErisimAnahtar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="6dp"
        android:background="@android:drawable/editbox_background"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lbltmdbErisimAnahtar"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize" />

    <TextView android:id="@+id/lbltmdbErisimDil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tmdb_erisim_dil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tmdbErisimAnahtar" />

    <Spinner android:id="@+id/tmdbErisimDil"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="6dp"
        android:background="@android:drawable/editbox_background"
        android:importantForAutofill="no"
        android:inputType="text"
        android:entries="@array/languages"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lbltmdbErisimDil"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize" />

    <LinearLayout
        android:id="@+id/cbLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tmdbErisimDil">

        <CheckBox
            android:id="@+id/sonTvKanalBaslat"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/son_tv_kanalini_oynatarak_basla"
            app:layout_constraintStart_toStartOf="parent" />

        <CheckBox
            android:id="@+id/tamEkranBaslat"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/tamEkranBaslat"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

    <Button
        android:id="@+id/btnIptal"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/iptal"
        app:layout_constraintEnd_toStartOf="@+id/btnKaydet"
        app:layout_constraintTop_toBottomOf="@id/cbLayout"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnKaydet"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/kaydet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cbLayout"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>