<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView android:id="@+id/lblParola"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/parola_giriniz"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtParola"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="6dp"
        android:background="@android:drawable/editbox_background"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblParola"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize" />

    <LinearLayout
        android:layout_marginStart="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:id="@+id/blgYeniParola"
        app:layout_constraintTop_toBottomOf="@id/txtParola">

        <TextView android:id="@+id/lblYeniParola1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yeni_parola_giriniz1"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtParola" />

        <EditText
            android:id="@+id/txtParolaYeni1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="6dp"
            android:background="@android:drawable/editbox_background"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lblParola"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintBounds" />

        <TextView android:id="@+id/lblYeniParola2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yeni_parola_giriniz2"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtParola" />

        <EditText
            android:id="@+id/txtParolaYeni2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="6dp"
            android:background="@android:drawable/editbox_background"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lblParola"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintBounds" />
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/blgYeniParola">
        <Button
            android:id="@+id/parolaIptal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@android:string/cancel"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/parolaDegistir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/degistir"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/parolaTamam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/ok"
            android:layout_gravity="end"
            tools:ignore="ButtonStyle" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>