<?xml version="1.0" encoding="utf-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="8dp"
    android:background="?android:attr/selectableItemBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/seriAfis"
        android:layout_width="200dp"
        android:layout_height="250dp"
        android:layout_marginTop="2dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:background="@color/cardview_shadow_end_color"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </ImageView>
    <TextView
        android:id="@+id/seriAd"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginTop="2dp"
        android:background="@color/cardview_shadow_end_color"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seriAfis"/>

    <TextView
        android:id="@+id/seriOzellik"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginTop="2dp"
        android:background="@color/cardview_shadow_end_color"
        android:text="@string/app_name"
        android:layout_marginBottom="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seriAd" />

    <TextView
        android:id="@+id/seriAciklama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginTop="2dp"
        android:background="@color/cardview_shadow_end_color"
        android:text="@string/app_name"
        android:layout_marginBottom="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seriOzellik" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:id="@+id/sezonSecCont"
        app:layout_constraintWidth_percent="0.5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seriAciklama">

        <AutoCompleteTextView
            android:id="@+id/sezonSec"
            android:layout_width="match_parent"

            android:layout_height="50dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="0dp"
            android:inputType="none"
            android:text="@string/app_name"
            tools:ignore="LabelFor,DuplicateSpeakableTextCheck,VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"

        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.475"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="32dp"

        app:layout_constraintStart_toEndOf="@id/sezonSecCont"
        app:layout_constraintTop_toBottomOf="@id/seriAciklama">

        <AutoCompleteTextView
            android:id="@+id/bolumSec"
            android:layout_width="match_parent"

            android:layout_height="50dp"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"

            android:inputType="none"
            android:text="@string/app_name"
            tools:ignore="LabelFor,VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/bolumAciklama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginTop="2dp"
        android:background="@color/cardview_shadow_end_color"
        android:text="@string/app_name"
        android:layout_marginBottom="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sezonSecCont" />

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bolumAciklama">

        <Button
            android:id="@+id/seriTmdb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/tmdb_bagla" />

        <Button
            android:id="@+id/seriTmdbDetay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/bolum_cek" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:visibility="gone"
            android:text="@string/uc_nokta" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
